# readme.com-testing

.github/workflows/: rdme-docs.yml
docarray_fake/: pyproject.toml
docarray_fake/docarray_fake/: __init__.py
docs/: cat.md  index.md
