[tool.poetry]
name = "docarray-fake"
version = "0.1.0"
description = ""
authors = ["samsja <sami.jaghouar@hotmail.fr>"]
readme = "README.md"
packages = [{include = "docarray_fake"}]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
